--- a/troubleshoot.ipynb
+++ b/troubleshoot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import imageio as iio\n",
+    "import imageio.v3 as iio\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
     "import numpy as np\n",
@@ -123,7 +123,10 @@
     "print('Binarizing images...')\n",
     "# Borders must be excluded after seg. to avoid exclusion of connected regions\n",
     "imgs_binarized, thresh_vals = segment.binarize_multiotsu(\n",
-    "    imgs_pre, n_otsu_classes=2, exclude_borders=False, \n",
+    "    imgs_pre, \n",
+    "    n_otsu_classes=ui_n_otsu_classes, \n",
+    "    n_selected_thresholds=ui_n_selected_classes, \n",
+    "    exclude_borders=False, \n",
     ")\n",
     "print('--> Binarization complete')\n",
     "print('--> Size of array (GB): ', imgs_binarized.nbytes / 1E9)\n",
@@ -192,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exclude border particles and iterate through regions"
+    "### Exclude border particles"
    ]
   },
   {
@@ -219,36 +222,270 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterate through regions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print()\n",
-    "print('Generating surface meshes...')\n",
-    "n_saved = segment.save_regions_as_stl_files(\n",
-    "    imgs,\n",
-    "    regions,\n",
-    "    ui_stl_dir_location,\n",
-    "    ui_output_filename_base,\n",
-    "    n_particles_digits,\n",
-    "    suppress_save_msg=ui_suppress_save_msg,\n",
-    "    slice_crop=ui_slice_crop,\n",
-    "    row_crop=ui_row_crop,\n",
-    "    col_crop=ui_col_crop,\n",
-    "    spatial_res=ui_spatial_res,\n",
-    "    voxel_step_size=ui_voxel_step_size,\n",
-    "    erode_particles=ui_erode_particles,\n",
-    "    stl_overwrite=ui_stl_overwrite,\n",
-    "    return_n_saved=True,\n",
+    "import open3d as o3d\n",
+    "\n",
+    "def check_properties(mesh):\n",
+    "    n_triangles = len(mesh.triangles)\n",
+    "    edge_manifold = mesh.is_edge_manifold(allow_boundary_edges=True)\n",
+    "    edge_manifold_boundary = mesh.is_edge_manifold(allow_boundary_edges=False)\n",
+    "    vertex_manifold = mesh.is_vertex_manifold()\n",
+    "    self_intersecting = mesh.is_self_intersecting()\n",
+    "    watertight = mesh.is_watertight()\n",
+    "    orientable = mesh.is_orientable()\n",
+    "    print(f\"  n_triangles:            {n_triangles}\")\n",
+    "    print(f\"  edge_manifold:          {edge_manifold}\")\n",
+    "    print(f\"  edge_manifold_boundary: {edge_manifold_boundary}\")\n",
+    "    print(f\"  vertex_manifold:        {vertex_manifold}\")\n",
+    "    print(f\"  self_intersecting:      {self_intersecting}\")\n",
+    "    print(f\"  watertight:             {watertight}\")\n",
+    "    print(f\"  orientable:             {orientable}\")\n",
+    "    print()\n",
+    "\n",
+    "def repair_mesh(mesh):\n",
+    "    print('Repairing mesh...')\n",
+    "    mesh.remove_degenerate_triangles()\n",
+    "    mesh.remove_duplicated_triangles()\n",
+    "    mesh.remove_duplicated_vertices()\n",
+    "    mesh.remove_non_manifold_edges()\n",
+    "    return mesh\n",
+    "\n",
+    "def smooth_mesh(mesh, n_iter=10):\n",
+    "    print('Smoothing mesh...')\n",
+    "    smoothed = mesh.filter_smooth_simple(number_of_iterations=n_iter)\n",
+    "    return smoothed \n",
+    "\n",
+    "def simplify_mesh(mesh, n_tris=500):\n",
+    "    print('Simplifying mesh...')\n",
+    "    simplified = mesh.simplify_quadric_decimation(n_tris)\n",
+    "    if not simplified.is_watertight():\n",
+    "        simplified, n_tris = simplify_mesh(mesh, n_tris + 1)\n",
+    "    return simplified, n_tris\n",
+    "\n",
+    "def postprocess_mesh(\n",
+    "        stl_save_path, smooth_iter=10, simplify_n_tris=250, \n",
+    "        repair_mesh=True, return_props=True\n",
+    "):\n",
+    "    stl_save_path = str(stl_save_path)\n",
+    "    stl_mesh = o3d.io.read_triangle_mesh(stl_save_path)\n",
+    "    if smooth_iter is not None:\n",
+    "        stl_mesh = stl_mesh.filter_smooth_simple(number_of_iterations=smooth_iter)\n",
+    "    if simplify_n_tris is not None:\n",
+    "        stl_mesh = stl_mesh.simplify_quadric_decimation(simplify_n_tris)\n",
+    "    if repair_mesh:\n",
+    "        stl_mesh.remove_degenerate_triangles()\n",
+    "        stl_mesh.remove_duplicated_triangles()\n",
+    "        stl_mesh.remove_duplicated_vertices()\n",
+    "        stl_mesh.remove_non_manifold_edges()\n",
+    "    o3d.io.write_triangle_mesh(\n",
+    "        stl_save_path, stl_mesh, \n",
+    "        # Currently unsupported to save STLs in ASCII format\n",
+    "        # write_ascii=True\n",
+    "    )\n",
+    "    if return_props:\n",
+    "        mesh_props = {}\n",
+    "        mesh_props['n_triangles'] = len(stl_mesh.triangles)\n",
+    "        mesh_props['watertight'] = stl_mesh.is_watertight()\n",
+    "        mesh_props['self_intersecting'] = stl_mesh.is_self_intersecting()\n",
+    "        mesh_props['orientable'] = stl_mesh.is_orientable()\n",
+    "        mesh_props['edge_manifold'] = stl_mesh.is_edge_manifold(allow_boundary_edges=True)\n",
+    "        mesh_props['edge_manifold_boundary'] = stl_mesh.is_edge_manifold(allow_boundary_edges=False)\n",
+    "        mesh_props['vertex_manifold'] = stl_mesh.is_vertex_manifold()\n",
+    "        return mesh_props"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stl_dir_location = ui_stl_dir_location\n",
+    "output_filename_base = ui_output_filename_base\n",
+    "suppress_save_msg=ui_suppress_save_msg\n",
+    "slice_crop=ui_slice_crop\n",
+    "row_crop=ui_row_crop\n",
+    "col_crop=ui_col_crop\n",
+    "spatial_res=ui_spatial_res\n",
+    "voxel_step_size=ui_voxel_step_size\n",
+    "allow_degenerate_tris=False\n",
+    "erode_particles=ui_erode_particles\n",
+    "stl_overwrite=False\n",
+    "n_saved = 0\n",
+    "n_not_saved = 0\n",
+    "bbox_dict = {\n",
+    "    'min_slice' : [],\n",
+    "    'max_slice' : [],\n",
+    "    'min_row' : [],\n",
+    "    'max_row' : [],\n",
+    "    'min_col' : [],\n",
+    "    'max_col' : [],\n",
+    "}\n",
+    "n_erosions = 1\n",
+    "regions_subset = [region for i, region in enumerate(regions) if i < 100]\n",
+    "for region in regions_subset:\n",
+    "    # Determine if STL can be saved\n",
+    "    # if stl_save_path.exists() and not stl_overwrite:\n",
+    "    #     raise ValueError(f'STL already exists: {stl_save_path}')\n",
+    "    # elif stl_save_path.exists() and stl_overwrite:\n",
+    "    #     stl_save_path.unlink()\n",
+    "    # If STL can be saved, continue with process\n",
+    "    n_voxels = region.area  # 3D area is actually volume (N voxels)\n",
+    "    # Get bounding slice, row, and column\n",
+    "    min_slice, min_row, min_col, max_slice, max_row, max_col = region.bbox\n",
+    "    # Continue with process if particle has at least 2 voxels in each dim\n",
+    "    if (\n",
+    "        max_slice - min_slice >= 2 \n",
+    "        and max_row - min_row >= 2 \n",
+    "        and max_col - min_col >= 2\n",
+    "    ):\n",
+    "        # Isolate Individual Particles\n",
+    "        imgs_particle = region.image\n",
+    "        # Create array of zeros with a voxel of padding around region\n",
+    "        imgs_particle_padded = np.pad(imgs_particle, 1)\n",
+    "        # Insert region inside padding\n",
+    "        imgs_particle_padded[1:-1, 1:-1, 1:-1] = imgs_particle\n",
+    "        if n_erosions is not None:\n",
+    "            for _ in range(n_erosions):\n",
+    "                imgs_particle_padded = morphology.binary_erosion(\n",
+    "                    imgs_particle_padded\n",
+    "                )\n",
+    "            fn_suffix = f'-{n_erosions}_erosions'\n",
+    "        else:\n",
+    "            # Set fn_suffix in case there are no erosions\n",
+    "            fn_suffix = ''\n",
+    "        # Create save path\n",
+    "        fn = (\n",
+    "            f'{output_filename_base}'\n",
+    "            f'{str(region.label).zfill(n_particles_digits)}'\n",
+    "            f'{fn_suffix}.stl'\n",
+    "        )\n",
+    "        stl_save_path = Path(stl_dir_location) / fn\n",
+    "        # stl_save_path = Path(r'C:\\Users\\gusb\\Research\\PSAAP\\STL-files') / fn\n",
+    "        # Do Surface Meshing - Marching Cubes\n",
+    "        if imgs_particle_padded.max() != 0:\n",
+    "            verts, faces, normals, values = measure.marching_cubes(\n",
+    "                imgs_particle_padded, step_size=voxel_step_size,\n",
+    "                allow_degenerate=allow_degenerate_tris\n",
+    "            )\n",
+    "            # Convert vertices (verts) and faces to numpy-stl format for saving:\n",
+    "            vertice_count = faces.shape[0]\n",
+    "            stl_mesh = mesh.Mesh(\n",
+    "                np.zeros(vertice_count, dtype=mesh.Mesh.dtype),\n",
+    "                remove_empty_areas=False\n",
+    "            )\n",
+    "            for i, face in enumerate(faces):\n",
+    "                for j in range(3):\n",
+    "                    stl_mesh.vectors[i][j] = verts[face[j], :]\n",
+    "            # Calculate offsets for STL coordinates\n",
+    "            if col_crop is not None:\n",
+    "                x_offset = col_crop[0]\n",
+    "            else: \n",
+    "                x_offset = 0\n",
+    "            if row_crop is not None:\n",
+    "                y_offset = row_crop[0]\n",
+    "            else: \n",
+    "                y_offset = 0\n",
+    "            if slice_crop is not None:\n",
+    "                z_offset = slice_crop[0]\n",
+    "            else:\n",
+    "                z_offset = 0\n",
+    "            # Add offset related to particle location. Subtracted by one to \n",
+    "            # account for voxel padding on front end of each dimension.\n",
+    "            x_offset += min_col - 1\n",
+    "            y_offset += min_row - 1\n",
+    "            z_offset += min_slice - 1\n",
+    "            # Apply offsets to (x, y, z) coordinates of mesh\n",
+    "            stl_mesh.x += x_offset\n",
+    "            stl_mesh.y += y_offset\n",
+    "            stl_mesh.z += z_offset\n",
+    "            # stl_mesh.vectors are the position vectors. Multiplying by the \n",
+    "            # spatial resolution of the scan makes these vectors physical.\n",
+    "            stl_mesh.vectors *= spatial_res\n",
+    "            # Save STL only if mesh is closed\n",
+    "            if stl_mesh.is_closed():\n",
+    "                stl_mesh.save(stl_save_path)\n",
+    "                props = postprocess_mesh(\n",
+    "                    stl_save_path, smooth_iter=10, simplify_n_tris=250, \n",
+    "                    repair_mesh=True, return_props=True\n",
+    "                )\n",
+    "                mesh_props = {'particleID' : region.label}\n",
+    "                mesh_props.update(props)\n",
+    "                n_saved += 1\n",
+    "                bbox_dict['min_slice'].append(min_slice)\n",
+    "                bbox_dict['max_slice'].append(max_slice)\n",
+    "                bbox_dict['min_row'].append(min_row)\n",
+    "                bbox_dict['max_row'].append(max_row)\n",
+    "                bbox_dict['min_col'].append(min_col)\n",
+    "                bbox_dict['max_col'].append(max_col)\n",
+    "                if not suppress_save_msg:\n",
+    "                    print(f'STL saved: {stl_save_path}')\n",
+    "                    print(mesh_props)\n",
+    "            else:\n",
+    "                n_not_saved += 1\n",
+    "                print(\n",
+    "                    f'Particle {region.label} not saved: surface not '\n",
+    "                    'closed.'\n",
+    "                )\n",
+    "        else:\n",
+    "            n_not_saved += 1\n",
+    "            print(\n",
+    "                f'Surface mesh not created for particle {region.label}: '\n",
+    "                'Array empty.' \n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = segment.plot_mesh_3D(stl_save_path)\n",
+    "ax.view_init(elev=None, azim=30)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = segment.plot_stl()\n",
+    "ax.view_init(elev=None, azim=30)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = segment.plot_imgs(\n",
+    "    imgs_particle_padded, \n",
+    "    n_imgs=imgs_particle_padded.shape[0], \n",
+    "    imgs_per_row=5\n",
     ")\n",
-    "print(f'--> {n_saved} STL file(s) written!')"
+    "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit (system)",
+   "display_name": "Python 3.9.5 ('segmentflow-env')",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +504,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3c41d41f3d36fd385a14502755cac50397031560266a576f36333e8ea386c7f1"
+    "hash": "c3ea4ac3b0a981222cd6c1b31ef210f70ea1aaeaaf9d024a28a9ae05259f6363"
    }
   }
  },
