Fix slight format issues with headers and double-strings

--- a/example-ct-to-stl.ipynb
+++ b/example-ct-to-stl.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import packages"
+    "## Import packages"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load 3D data"
+    "## Load 3D data"
    ]
   },
   {
@@ -97,14 +97,12 @@
     "yaml_path = Path('segmentflow-input.yml')\n",
     "ui = segment.load_inputs(yaml_path)\n",
     "# Load images as 3D array from a directory containing images\n",
-    "print('Loading images...')\n",
     "imgs = segment.load_images(\n",
     "        ui['ct_img_dir'],\n",
     "        slice_crop=ui['slice_crop'],\n",
     "        row_crop=ui['row_crop'], \n",
     "        col_crop=ui['col_crop'],\n",
     "        file_suffix=ui['file_suffix'])\n",
-    "print(f'--> Images loaded as 3D array: {imgs.shape}')\n",
     "# Plot images\n",
     "fig, axes = segment.plot_imgs(imgs, n_imgs=4)\n",
     "plt.show()"
@@ -147,12 +145,10 @@
     }
    ],
    "source": [
-    "print('Preprocessing images...')\n",
     "imgs_pre = segment.preprocess(\n",
     "        imgs, \n",
     "        median_filter=ui['pre_seg_med_filter'], \n",
     "        rescale_intensity_range=ui['rescale_range'])\n",
-    "print('--> Preprocessing complete.')\n",
     "# Plot preprocessed images\n",
     "fig, axes = segment.plot_imgs(imgs_pre, n_imgs=4)\n",
     "plt.show()"
@@ -451,9 +447,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "3c41d41f3d36fd385a14502755cac50397031560266a576f36333e8ea386c7f1"
-  },
   "kernelspec": {
    "display_name": "Python 3.9.5 64-bit (system)",
    "language": "python",
@@ -470,6 +463,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c3ea4ac3b0a981222cd6c1b31ef210f70ea1aaeaaf9d024a28a9ae05259f6363"
+   }
   }
  },
  "nbformat": 4,
